# ARM-processor-simulator

./: .gitignore  README.md
arm_simulator-1.4/: Makefile  arm.c  arm.h  arm_branch_other.c  arm_branch_other.h  arm_constants.c  arm_constants.h  arm_core.c  arm_core.h  arm_data_processing.c  arm_data_processing.h  arm_exception.c  arm_exception.h  arm_instruction.c  arm_instruction.h  arm_load_store.c  arm_load_store.h  arm_simulator  arm_simulator.c  config.status  configure  configure.ac  csapp.c  csapp.h  debug.c  debug.h  gdb_protocol.c  gdb_protocol.h  make_trace.sh  memory.c  memory.h  memory_test  memory_test.c  no_trace_location.h  registers.c  registers.h  scanner.h  send_irq  send_irq.c  trace.c  (+4 more)
arm_simulator-1.4/.deps/: registers.Po
arm_simulator-1.4/Examples/: Makefile  example1  example2  example3  example4  example4.s  insertion_sort  test_ldr_str_gabs  test_ldr_str_gabs.s
arm_simulator-1.4/Examples/.deps/: insertion_sort.Po
arm_simulator-1.4/tests/: Makefile.am  Makefile.in  test  test.s  test_data_processing_1.s  test_data_processing_2.s  test_data_processing_3.s  test_data_processing_4.s  test_data_processing_5.s  test_exception.s  test_ldm_stm.s  test_ldrh_strh.s
